--- a/store/templates/store/return_drugs_report.html
+++ b/store/templates/store/return_drugs_report.html
@@ -4,7 +4,7 @@
 <div class="container mx-auto p-4">
     <div class="flex justify-center p-4 gap-4 text-xl">
         <div>
-            <a href="{% url 'unit_dashboard' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="{% url 'return_drugs_list' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
         <div>
             <h2 class="text-lg text-center text-teal-700 uppercase">{{ unit.name }} RETURNED DRUGS</h2>
