--- a/store/templates/store/return_drugs_report.html
+++ b/store/templates/store/return_drugs_report.html
@@ -23,7 +23,7 @@
 
     <div class="bg-white shadow overflow-hidden sm:rounded-lg mb-4">
         <div class="px-4 py-5 sm:p-6">
-            <form method="get" class="space-y-4 uppercase" value="{{ field.value|default:'' }}">
+            <form method="get" class="space-y-4 uppercase">
                 <div class="md:flex md:justify-center gap-4 grid grid-cols-2">
                     {% for field in returnfilter.form %}
                     <div>
